--- a/index.html
+++ b/index.html
@@ -12,16 +12,21 @@
 <body>
     <main>
         <section id="telefone">
-
+            <iframe src="" name="tela" frameborder="0"></iframe>
         </section>
 
         <section id="redes">
-            <img src="imagens/logo-home.jpg" alt="">
-            <img src="imagens/logo-facebook.jpg" alt="">
-            <img src="imagens/logo-github.jpg" alt="">
-            <img src="imagens/logo-instagram.jpg" alt="">
-            <img src="imagens/logo-twitter.jpg" alt="">
-            <img src="imagens/logo-youtube.jpg" alt="">
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
+
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+
+            <a href="insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
         </section>
     </main>
 </body>
