corrigi os links

--- a/twitter.html
+++ b/twitter.html
@@ -43,7 +43,7 @@
         <img src="imagens/tela-twitter.jpg" alt="Twitter">
     </main>
     <footer>
-        <p><a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank" rel="external">ACESSE</a></p>
+        <p><a href="https://twitter.com/guanabara" target="_blank" rel="external">ACESSE</a></p>
     </footer>
 </body>
 </html>
