--- a/youtube.html
+++ b/youtube.html
@@ -49,7 +49,7 @@
         <img src="imagens/tela-youtube.png" alt="YouTube">
     </main>
     <footer>
-        <p><a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank" rel="external">ACESSE</a></p>
+        <p><a href="https://www.youtube.com/@CursoemVideo" target="_blank" rel="external">ACESSE</a></p>
     </footer>
 </body>
 
