--- a/insta.html
+++ b/insta.html
@@ -44,7 +44,7 @@
     </main>
 
     <footer>
-        <p><a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank" rel="external">ACESSE</a></p>
+        <p><a href="https://www.instagram.com/gustavoguanabara/?hl=pt" target="_blank" rel="external">ACESSE</a></p>
     </footer>
 </body>
 </html>
