--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
         </section>
 
         <section id="redes">
-            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a>
+            <a href="home.html" target="tela"><img src="imagens/logo-home.jpg" alt="Home"></a> <br>
 
-            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a>
+            <a href="face.html" target="tela"><img src="imagens/logo-facebook.jpg" alt=""></a> <br>
 
-            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a>
+            <a href="github.html" target="tela"><img src="imagens/logo-github.jpg" alt=""></a> <br>
 
-            <a href="insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a>
+            <a href="insta.html" target="tela"><img src="imagens/logo-instagram.jpg" alt="Instagram"></a> <br>
 
-            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a>
+            <a href="twitter.html" target="tela"><img src="imagens/logo-twitter.jpg" alt="Twitter"></a> <br>
 
-            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a>
+            <a href="youtube.html" target="tela"><img src="imagens/logo-youtube.jpg" alt=""></a> <br>
         </section>
     </main>
 </body>
