--- a/face.html
+++ b/face.html
@@ -1,49 +1,55 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
-        *{
+        * {
             margin: 0;
         }
-        footer{
+
+        footer {
             width: 193px;
             height: 40px;
         }
-        footer > p{
-            border: 2px solid red;
+
+        footer{
             text-align: center;
             height: 50px;
-            background-color: red;
+            background-color: darkred;
             font-family: sans-serif;
             font-size: 40px;
         }
 
-        main{
+        main {
             width: 193px;
             margin: auto;
         }
-        img{
+
+        img {
             width: 193px;
         }
 
-        a{
+        a {
             color: white;
             text-decoration: none;
         }
-        a:hover{
-            text-decoration: underline;
+
+        a:hover {
+           text-decoration: underline;
         }
     </style>
     <title>Facebok</title>
 </head>
+
 <body>
     <main>
         <img src="imagens/tela-facebook.jpg" alt="facebook">
     </main>
     <footer>
-        <p><a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank" rel="external">ACESSE</a></p>
+        <a href="https://www.facebook.com/gustavoguanabara/?locale=pt_BR" target="_blank" rel="external">ACESSE</a>
     </footer>
 </body>
+
 </html>
